# instanseg

./: .gitignore  Dockerfile  LICENSE  README.md  env.yml  models.py  pyproject.toml  requirements.txt  setup.py  setup3.py
.github/workflows/: build.yml  docs.yml  publish.yml
InstanSeg/: __init__.py  instanseg.py  models.py
InstanSeg/scripts/: inference.py  test.py  train.py
InstanSeg/utils/: AI_utils.py  __init__.py  augmentation_config.py  augmentations.py  biological_utils.py  create_bioimageio_model.py  data_download.py  data_loader.py  metrics.py  model_loader.py  pytorch_utils.py  tiling.py  utils.py
InstanSeg/utils/loss/: instanseg_loss.py  lovasz_losses.py
InstanSeg/utils/models/: ChannelInvariantNet.py  InstanSeg_UNet.py  cellpose_model.py
InstanSeg/utils/rdf_scripts/: instanseg_postprocess.ijm
assets/: index.json  instanseg-model-index.json
docs/: conf.py  index.rst  instanseg.inference_class.rst  instanseg.rst  instanseg.utils.AI_utils.rst  instanseg.utils.augmentation_config.rst  instanseg.utils.augmentations.rst  instanseg.utils.biological_utils.rst  instanseg.utils.create_bioimageio_model.rst  instanseg.utils.data_download.rst  instanseg.utils.data_loader.rst  instanseg.utils.metrics.rst  instanseg.utils.model_loader.rst  instanseg.utils.pytorch_utils.rst  instanseg.utils.tiling.rst  instanseg.utils.utils.rst
instanseg/: __init__.py  inference_class.py  instanseg.py  model-index.json
instanseg/bioimageio_models/: model-index.json
instanseg/examples/: Fluorescence_example.tif  HE_example.tif
instanseg/models/: model-index.json
instanseg/scripts/: inference.py  test.py  train.py
instanseg/utils/: AI_utils.py  augmentation_config.py  augmentations.py  biological_utils.py  create_bioimageio_model.py  create_bioimagio_model.py  create_bioimagio_model_2.py  data_download.py  data_loader.py  display.py  metrics.py  model_loader.py  pytorch_utils.py  tiling.py  utils.py  visualization.py
instanseg/utils/loss/: instanseg_loss.py  lovasz_losses.py
instanseg/utils/models/: CellSam_VISTA.py  CellposeSam.py  ChannelInvariantNet.py  InstanSeg_UNet.py  SegFormer.py  sam.py
instanseg/utils/rdf_scripts/: instanseg_preprocess.ijm
notebooks/: README.md  export_model.ipynb  load_datasets.ipynb  segmentation_minimal.ipynb  training_minimal.ipynb
tests/: __init__.py  test_edge_cases.py  test_instanseg.py
tests/utils/: __init__.py  test_pytorch_utils.py  test_tiling.py  test_utils.py  test_visualization.py
