[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "instanseg-torch"
version = "0.0.7"
authors = [
  { name="Thibaut Goldsborough", email="thibaut.golds@gmail.com" },
]
description = "Package for instanseg-torch PyPi"
readme = "README.md"
requires-python = ">=3.9, <3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "bioio~=1.1.0",
    "bioio-ome-tiff~=1.0.1",
    "colorcet>=3.0.1",
    "einops>=0.7.0",
    "fastremap>=1.14.0",
    "geojson>=3.1.0",
    "matplotlib>=3.8.2",
    "numpy>=1.26.4",
    "palettable>=3.3.3",
    "rasterio>=1.3.9",
    "scikit-image>=0.22.0",
    "slideio>=2.6.2",
    "tifffile>=2023.12.9,<2025.2.18",
    "tiffslide>=2.4.0",
    "torch>=2.1.1",
    "tqdm>=4.66.1"
]


[project.optional-dependencies]
test = [
    "pytest~=8.2.2",
    "coverage~=7.6.5",
    "genbadge~=1.1.1"
]
full = [
    "bioimageio.core~=0.7.0",
    "bioimageio.spec~=0.5.3.5",
    "colorcet>=3.0.1",
    "cucim>=23.10.00; platform_system=='Linux'",
    "edt",
    "einops>=0.7.0",
    "fastremap>=1.14.0",
    "hyperopt>=0.2.7",
    "imagecodecs>=2024.1.1",
    "ipykernel>=6.28.0",
    "ipywidgets>=8.1.1",
    "jupyterlab>=4.0.10",
    "kornia>=0.7.0",
    "line_profiler>=4.1.3",
    "matplotlib>=3.8.2",
    "monai>=1.3.0",
    "numba>=0.58.1",
    "onnx>=1.15.0",
    "opencv-python>=4.9.0",
    "pip>=23.3.2",
    "rasterio>=1.3.9",
    "scikit-image>=0.22.0",
    "scikit-learn>=1.3.2",
    "scipy>=1.11.4",
    "seaborn>=0.13.1",
    "stardist>=0.8.5",
    "tensorboard>=2.17.0",
    "tifffile>=2023.12.9",
    "tkinterdnd2>=0.4.2",
    "torchstain>=1.3.0",
    "torchvision>=0.16.1",
    "tqdm>=4.66.1"
]

[tool.hatch.build]
include = ["instanseg/**"]
exclude = ["notebooks/**", "instanseg/examples/*", "assets/**"]

[project.urls]
Homepage = "https://github.com/instanseg/instanseg"
Issues = "https://github.com/instanseg/instanseg/issues"
