[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "instanseg-torch"
version = "0.0.9"
authors = [
  { name="Thibaut Goldsborough", email="thibaut.golds@gmail.com" },
]
description = "Package for instanseg-torch PyPi"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

# Core dependencies - minimal set for inference
dependencies = [
    "einops>=0.6.0",
    "fastremap>=1.14.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "scikit-image>=0.21.0",
    "tifffile>=2023.9.0",
    "tiffslide>=2.4.0",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
]

[project.scripts]
inference = "instanseg.scripts.inference:main"

[project.optional-dependencies]
# Additional I/O backends and GeoJSON export
io = [
    "bioio>=1.0.0",
    "bioio-ome-tiff>=1.0.0",
    "geojson>=3.0.0",
    "rasterio>=1.3.0",
    "slideio>=2.6.0",
]
doc = [
    "sphinx~=7.4.5",
    "sphinx-rtd-theme~=2.0.0",
]
test = [
    "pytest~=8.2.2",
    "coverage~=7.6.5",
    "genbadge~=1.1.1",
]
# Full installation for training and all features
full = [
    "instanseg-torch[io]",
    "bioimageio.core>=0.9.0",
    "bioimageio.spec>=0.5.6.0",
    "colorcet>=3.0.1",
    "cucim>=23.10.00; platform_system=='Linux'",
    "edt",
    "hyperopt>=0.2.7",
    "imagecodecs>=2024.1.1",
    "ipykernel>=6.28.0",
    "ipywidgets>=8.1.1",
    "jupyterlab>=4.0.10",
    "kornia>=0.7.0",
    "line_profiler>=4.1.3",
    "monai>=1.3.0",
    "onnx>=1.15.0",
    "opencv-python>=4.9.0",
    "palettable>=3.3.3",
    "scikit-learn>=1.3.2",
    "scipy>=1.11.4",
    "seaborn>=0.13.1",
    "tensorboard>=2.17.0",
    "tkinterdnd2>=0.4.2",
    "torchstain>=1.3.0",
    "torchvision>=0.15.0",
]

[tool.hatch.build]
include = ["instanseg/**","instanseg/bioimageio_models/model-index.json"]
exclude = ["scratch_notebooks/**","notebooks/**", "instanseg/examples/*", "assets/**", "instanseg/bioimageio_models/**","!instanseg/bioimageio_models/model-index.json",]

[project.urls]
Homepage = "https://github.com/instanseg/instanseg"
Issues = "https://github.com/instanseg/instanseg/issues"
